
2009-12-07 Rupert Germann <rupi@gmx.li>
	* fixed bug #13753: Category menu in mode "nested wraps" is broken. Thanks to Jochen Weiland for discovering 
	this issue and to Ingo Renner for sponsorimg this bug at the T3Board10 bug auction.
	
2009-12-07 Rupert Germann <rupi@gmx.li>
	* fixed bug #12944 (follow-up to #12848):  !!! Database change !!! unknown db field 'tags' in table tt_news_cache (thanks to Sven Juergens)

2009-12-02 Rupert Germann <rupi@gmx.li>
	* fixed bug #12848: !!! Database change !!! using caching framework for internal caching fails with exception. 
	* fixed bug #12808: Duplicated '?>' in class.tx_ttnews_cache.php (thanks to Stephan Bauer)
	* release of tt_news 3.0.1

2009-11-27 Rupert Germann <rupi@gmx.li>
	* fixed bug #9215: tt_news 3.0 category ajaxtree looses language parameter on ajax expand/collapse 
	* fixed bug #12757: IFNULL statements in tt_news queries are not DBAL compatible 
	* updated context sensitive help (CSH)
	* added missing xclass statement to class tt_news_cache
	* updated ext_emconf.php	
	* release of tt_news 3.0
	
2009-11-26  Rupert Germann <rupi@gmx.li>
	* added flashmessages icons for older TYPO3 versions to folder compat/gfx
	* changed "disallowed categories" message in tceforms to use flashmessages 
	* changed tt_news form: moved "hidden" field to the "General" tab and moved author-email to a palette (Thanks to Georg Ringer)
	* follow-up to feature #12118: removed tab "Typoscript" from flexform and moved the new "typoscript" field to the "other settings" tab
	* follow-up to feature #12118: added a condtion to the flexform field "typoscript" which hides this field from non-admin users
	* updated doc "changes in tt_news 3.0"
	* added feature #12763: integate possibility to convert tt_news to USER_INT using $this->cObj->convertToUserIntObject() 
	  (requires TYPO3 4.3 to work) (Thanks to Krystian Szymukowicz)
	* Started to update the tt_news manual

2009-11-25  Rupert Germann <rupi@gmx.li>