@@ -723,7 +723,52 @@ plugin.tt_news {
 
 
 
+  
+  displayRelated {
+    noPageBrowser = 1
+    limit = 15
+    
 
+    noNewsToListMsg_stdWrap.wrap = 
+    displayList {
+	   age_stdWrap.age = 1
+	    date_stdWrap.strftime= %d.%m.%Y
+	    time_stdWrap.strftime= %H:%M
+	    caption_stdWrap.if.directReturn = 0
+	    subheader_stdWrap {
+	      stripHtml = 1
+	      crop = 100 | ... | 1
+	      ifEmpty.field = bodytext
+	      outerWrap = <p>|</p>
+	    }
+	    imageCount = 1
+	    imgAltTextField = imagecaption
+	    imageWrapIfAny =
+	    category_stdWrap.wrap = <div class="news-latest-category"> | </div>
+	    categoryItem_stdWrap.wrap =
+	
+	    linkTitleField = title
+	    linkTitleField.wrap =
+	    linkAltField = short
+	    linkAltField.wrap =
+	    
+	    latestImageMode = {$plugin.tt_news.latestImageMode}
+	 
+	  }
+	  displayList.image {
+	    file.maxW = {$plugin.tt_news.latestMaxW}
+	    file.maxH = {$plugin.tt_news.latestMaxH}
+	    imageLinkWrap = 1
+	
+	    stdWrap.spaceAfter = 0
+	  }
+
+    
+    _LOCAL_LANG {
+      de.noNewsToListMsg = 
+      en.noNewsToListMsg = 
+    }
+  }
 
 
 
