@@ -374,6 +374,7 @@ LINK_NEXT - used in the pagebrowser
 					###NEWS_RELATEDBYCATEGORY###
 
 			###ADDINFO_WRAP_E###
+			
 			###NEWS_SINGLE_PAGEBROWSER###
 	<div class="news-single-backlink">
 	<!--###LINK_ITEM###-->###BACK_TO_LIST###<!--###LINK_ITEM###-->
@@ -656,6 +657,19 @@ LINK_NEXT - used in the pagebrowser
 <br />
 <br />
 <br />
+
+<!-- ###TEMPLATE_RELATED### begin -->
+	<!-- ###CONTENT### begin
+		  This is the part of the template substituted with the list of news:
+	-->
+		<!-- ###NEWS### begin
+			Template for a single item
+		-->
+		<!--###LINK_ITEM###-->###NEWS_IMAGE###<!--###LINK_ITEM###-->
+		###GW2B### <!--###LINK_ITEM###-->###NEWS_TITLE###<!--###LINK_ITEM###-->  ###NEWS_DATE### ###NEWS_TIME###  ###GW2E###
+		<!-- ###NEWS### end-->
+	<!-- ###CONTENT###  end -->
+<!-- ###TEMPLATE_RELATED### end -->
 
 
 
